static/css/styles.css
/* Reseta algumas propriedades padrão */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body, html {
    background-color: #FFEED9;
    
  /*   height: 100%;
    font-family: 'Arial', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center; */
}

header {
    width: 100%;
    
    padding: 20px 0;
}

nav ul {
    display: flex;
    justify-content: flex-start;
    list-style: none;
    padding-left: 50px;
}

nav ul li {
    margin-right: 20px;
}

nav ul li a {
    text-decoration: none;
    color: #6A4E3D;
    font-size: 1.2em;
}

.container {
   
    height: 2000px;
    display: block;
    /* 
     width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center; 
    */
   
   
    background-color: #FFDDBF;
}

.home-section {
   /*  background-color: rgb(5, 3, 3); */
    background-color:#FFEED9;
    height: 1vh;
}

.home-content{
    position: absolute;
    
    width: 95%;
    height: 70%;
    margin-left: 50px;
    display: flex;
   
    
}

.home-title{
    width: 50%;
    height: auto;
    position: relative;
    justify-content: center;
    align-items: center;
    margin-top:8%;
    

}


h1 {
    font-size: 8em;
    color: #403930;
    margin-bottom: 20px;
    text-align: center;
    font-family: "Eczar";
}

.buttons {
   
    display: flex;
    gap: 20px;
    color: white;
    width: 100%;
    height: 50%;
    justify-content: center;     

}

.btn-login {
    background-color: #8D4E04;
    height: 5em;
    width: 15em;
    color: white;
    padding: 15px 30px;
    border: none;
    border-radius: 10px;
    font-size: 1.2em;
    cursor: pointer;
    
}

.btn-register {
    background-color: transparent;
    height: 5em;
    width: 15em;
    color: #8B5E34;
    padding: 15px 30px;
    border: 5px solid #8B5E34;
    border-radius: 10px;
    font-size: 1.2em;
    cursor: pointer;
    
}

.home-image{
    position: relative;
    
    width:auto;
    height: 300px;
    margin-top: 4%;
    margin-left: 5%;
}
.image-placeholder img {
    max-width: 100%;
    height: auto;
}
.input-field{
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.submit-btn{
    background-color: #8D4E04;
    height: 3em;
    width: 5em;
    color: white;
    padding: 3px;
    border: none;
    border-radius: 10px;
    font-size: 1em;
    cursor: pointer;
}

